Increase the max-width of the Archives section to avoid overflow of titles to the next line.

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -294,7 +294,7 @@ $copyright-margin: 10px 0 !default;
 $archive-margin: 2em 0px !default;
 
 // Max width of the archive.
-$archive-max-width: 550px !default;
+$archive-max-width: 700px !default;
 
 // Font size of the archive name.
 $archive-name-font-size: 30px !default;
